# TITA_Real

./: README.md
src/TITA_DRL/: CMakeLists.txt  package.xml
src/TITA_DRL/config/: initial_pose.yaml
src/TITA_DRL/config/policy/: model.engine  params_57.yaml  policy_57.onnx  policy_57_pmin.onnx
src/TITA_DRL/launch/: tita_drl.launch.py
src/TITA_DRL/src/: text.cpp
src/TITA_Pointfoot_Description/: CMakeLists.txt  package.xml
src/TITA_Pointfoot_Description/launch/: tita_display.launch.py
src/TITA_Pointfoot_Description/tita/urdf/: robot.urdf
src/TITA_Pointfoot_Description/tita/xacro/: description.xacro  display.xacro  robot.xacro  ros2control.xacro
部署/: 部署文档.doc
部署/文件/: params_57_pmin.yaml  policy_57_pmin.onnx  tita_drl_obs57.cpp
